add nav bar to index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis deleniti, nam iusto ullam id possimus quos mollitia, nulla ea labore optio, sint excepturi molestias sequi ad inventore dicta nostrum perspiciatis!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quam quaerat laborum atque consequuntur id repellat, quia doloremque vel? Assumenda odio commodi temporibus quas dolor sint consequuntur, illo similique. Distinctio.</p>
+    <ul>
+        <li>Home</li>
+        <li>Contact Us</li>
+        <li>About Us</li>
+    </ul>
 </body>
 </html>
